--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
