--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,9 +5,9 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12345}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
