--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
-spring.freemarker.suffix=.ftl
+spring.freemarker.suffix=.ftlh
 
 upload.path = /C:/accounting_system/uploadFiles
 
