--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/cgmd}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/cgmd}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12345}
 
@@ -15,7 +15,7 @@ spring.freemarker.suffix=.ftlh
 upload.path = /C:/accounting_system/uploadFiles
 
 # Max file size.
-spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-file-size=1024MB
 
 # Max Request Size
-spring.servlet.multipart.max-request-size=215MB
+spring.servlet.multipart.max-request-size=2048MB
